test/library/standard/Memory/Initialization/MoveInitializeCopyError.good
MoveInitializeCopyError.chpl:4: In function 'test1':
MoveInitializeCopyError.chpl:8: error: calling 'moveInitialize' with actual 'r2' would result in a copy
